--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-version: '3'
-services: 
+version: "3"
+services:
   nuxt_nest:
     build: .
     ports:
-    - "8080:8080"
+      - "5010:3000"
+    environment:
+      - BASE_URL=http://192.168.1.78:3000/
+      - NUXT_HOST=0.0.0.0
+      - NUXT_PORT=3000
