--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 services:
-  nuxt_nest:
+  web:
     build: .
     ports:
-      - "5010:3000"
+      - "${HOST_PORT}:${CONTAINER_PORT}"
     environment:
-      - BASE_URL=http://192.168.1.78:3000/
+      - BASE_URL=http://${HOST_IP}:${HOST_PORT}/
       - NUXT_HOST=0.0.0.0
-      - NUXT_PORT=3000
+      - NUXT_PORT=${CONTAINER_PORT}
