--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest",
+    "buildstart": "nuxt build && nuxt start"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.3.8",
